2015-09-25  James Hunt  <jamesodhunt@ubuntu.com>

	* src/procenv.c: show_libc(): New function for new '--libc'/'-B'
	  option.

2015-08-24  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Actually disable tests if non-existent
	  locale found.

2015-08-23  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: Coverity fixes:
	  - get_mtu(): Drop useless goto and explicit zero return on error.
	  - get_canonical(): safer string termination.
	  - Allow '--indent-char' to be UTF-8.
	* src/tests/check_all_args.in:
	  - New single-character tests for:
	    - '--indent-char'.
	    - '--separator'.
	  - New multi-character tests for:
	    - '--indent-char'.
	    - '--separator'.
	    - '--crumb-separator'.
	  - Check default locale is valid before attempting to use it.

2015-08-22  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.h: Use __func__ rather than __FUNCTION__ to appease gcc 5.2.

2015-08-21  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: save_locale(): Specify 2nd arg to setlocale()
	  as "" since the original NULL was not only incorrect, it caused
	  a UTF-8 '--separator' or '--crumb-separator' to cause a crash.
	* src/tests/check_all_args.in:
	  - New tests for UTF-8 '--separator' and '--crumb-separator'.
	  - Show language test being run with.
	  - Ensure full command-line shown on failure.

2015-07-11  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: show_security_module_context_linux():
	  Don't free @mode returned by aa_gettaskcon(2) since it forms
	  part of the allocation returned in @context.

2015-07-08  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Update copyright.
	  - show_mounts_linux(): Don't truncate fsid.
	  - show_mounts_bsd(): Don't truncate fsid.

2014-09-19  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: show_security_module_linux(): check HAVE_APPARMOR,
	  not HAVE_SYS_APPARMOR_H to allow building on Ubuntu Lucid (which does
	  not provide aa_is_enabled()).
